--- a/src/css/nosotros.css
+++ b/src/css/nosotros.css
@@ -14,33 +14,28 @@
 
 
     .divborder{
-        width: 85%;
         height: 500px;
-        color: #666;
+        margin-left: 140px;
+        margin-right: 140px;
     }
 
         .column-left-nos{
             float: left;
-            width: 55%;
+            width: 50%;
             height: 500px;
-            color: #666;
             display: flex;
             align-items: center;
             justify-content: center;
-
         }
             .div-imgs{
-                width: 90%;
+                width: 100%;
                 height: 450px;
-                color: #666;
-
             }
 
                 .div-imgs #img-nos1{
                     width: 30%;
                     border-radius: 15px;
                     margin-top: 40px;
-                    margin-left: 30px;
                     position: absolute;
                     z-index:90;
                 }
@@ -49,7 +44,7 @@
                     width: 30%;
                     border-radius: 15px;
                     margin-top: 200px;
-                    margin-left: 120px;
+                    margin-left: 90px;
                     border: solid 4px white;
                     position: absolute;
                     z-index: 100;
@@ -60,54 +55,54 @@
 
         .column-right-nos{
             float: right;
-            width: 45%;
+            width: 50%;
             height: 500px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            
 
         }
 
             .text-nosotros{
-                width: 75%;
+                width: 80%;
                 height: 370px;
+                float: right;
+                margin-top: 67px;
 
             }
 
                 .text-nosotros h2{
-                    font-family: poppins,sans-serif;
                     text-align: center;
-                    overflow-wrap: break-word;
-                    font-size: 1.5rem;
                     color: #0e2b3d;
                     margin-bottom: 25px;
+                    font-size: 25px;
+                    font-weight: 700;
                 }
 
                 .textp{
-                    font-family: poppins,sans-serif;
                     text-align: justify;
                     overflow-wrap: break-word;
                     margin: 0 0 15px;
-                    font-weight: 400;
+                    font-weight: 500;
                     line-height: 26px;
                     font-size: 15px;
+                    color: #666;
                 }
 
                 .list-nosotros{
-                    font-family: poppins,sans-serif;
                     list-style-type:none;
                     overflow-wrap: break-word;
                     margin: 0 0 15px;
-                    font-weight: 400;
+                    font-weight: 500;
                     line-height: 26px;
-                    font-size: 14px;
+                    font-size: 15px;
+                    color: #666;
+                    text-align: justify;
 
                 }
 
-                    .list-nosotros i{
-                        color: black;
-                        font-size: 14px;
-                        line-height: 1.5;
+                    .list-nosotros .fa-check-circle{
+                        color: #0e2b3d;
+                        font-size: 15px;
+                        margin-right: 5px;
                     }
 
                 .button-info-nos{
@@ -142,9 +137,15 @@
                     border-radius: 50px;
                     background-color: var(--color-negro-logo);
                 }
-
+                
 
 /* Seccion Nosotros responsive */
+@media screen and (max-width: 1100px ){
+    .text-nosotros{
+        width: 90%;
+    }
+}
+
 @media screen and (max-width: 1000px ){
     .section-nosotros{
       height: 800px;
@@ -152,11 +153,18 @@
   
       .divborder{
           height: 700px;
+          margin-right: 0px;
+          margin-left: 0px;
       }
   
           .column-left-nos, .column-right-nos{
               width: 100%;
               height: 350px;
+          }
+          .column-right-nos{
+            display: flex;
+            align-items: center;
+            justify-content: center;
           }
   
               .div-imgs{
@@ -168,7 +176,6 @@
                   .div-imgs #img-nos1{
                       width: 45%;
                       margin-top: 0px;
-                      margin-left: 0px;
                       z-index: none;
                   }
   
@@ -178,6 +185,9 @@
               
               .text-nosotros{
                   height: 300px;
+                  float: none;
+                  margin-top: 0px;
+                  width: 80%;
               }
       
   }
@@ -222,7 +232,6 @@
           height: 450px;
       }
           .text-nosotros{
-              width: 90%;
               height: 430px;
           }
    }
