--- a/src/css/ventajas.css
+++ b/src/css/ventajas.css
@@ -5,10 +5,20 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    background-image: linear-gradient(
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+        ),url('../img/img_ventajas.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative;
+    background-attachment: fixed;
 }
 
     .ventajas_container{
-        height: 680px;
+        height: 670px;
         width: 100%;
         margin-left: 140px;
         margin-right: 140px;
@@ -19,30 +29,36 @@
         }
 
             .ventajas_title h2{
+                font-size: 27px;
                 font-weight: 700;
-                font-size: 24px;
-                color: #0e2b3d;
+                color: #fff; 
+                line-height: 1.2rem;
+                
             }
 
         .ventajas_cards{
-            margin-top: 20px;
+            margin-top: 40px;
             width: 100%;
-            height: 600px;
+            height: auto;
             display: flex;
             flex-wrap: wrap;
-            gap: 10px;
-
+            gap: 12px;
         }
 
             .cardv{
                 width: 24%;
-                height: 200px;
-                border: 2px solid #dcdcdc;
-                background: #fff;
+                height: 180px;
+                background-color: rgba(255, 255, 255, 0.887);
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                border-radius: 12px;
+                box-shadow: 1px 4px 20px -2px rgb(0 0 0 / 10%);
             }
+
+                .cardv:hover{
+                    border: 1px solid #0e2b3d;;
+                }
 
 
                 .cardv_center{
@@ -51,26 +67,23 @@
                 }
 
                     .cardv_icono{
-                        height: 100px;
+                        height: 80px;
                         display: flex;
                         align-items: center;
                         justify-content: center;
+                        
                     }
 
                         .cardv_icono_circle{
-                            width: 70px;
-                            height:70px;
-                            line-height: 70px;
+                            width: 60px;
+                            height:60px;
+                            line-height: 60px;
                             border-radius: 50%;
                             background-color: var(--color-rojo-logo);
                             text-align: center;
-                            border: 3px solid #dcdcdc;
+                            border: 2px solid white;
                         }
 
-                            .fa-pencil-ruler, .fa-file-chart-line, .fa-phone-laptop, .fa-clock, .fa-shield-check, .fa-tachometer-slow, .fa-toggle-on, .fa-map, .fa-bell-on, .fa-mobile-alt, .fa-user-headset, .fa-lock-alt{
-                                font-size: 20px;
-                                color: white;
-                            }
 
                     .cardv_text{
                         text-align: center;
@@ -83,12 +96,94 @@
                             color: #0e2b3d;
                             font-weight: 700;
                             margin-bottom: 8px;
+                            
                         }
 
                         .cardv_text p{
-                            font-size: 10px;
+                            font-size: 11px;
                             color: #0e2b3d;
                         }
 
 
+/* Seccion Ventajas responsive */
+@media screen and (max-width: 1200px ){
+    .ventajas{
+        height: 1050px;
+    }
+        .ventajas_container{
+            height: 850px;
+        }
+            .ventajas_cards{
+                gap: 16px;
+            }
 
+                .cardv{
+                    width: 32%;   
+                }
+
+}
+
+@media screen and (max-width: 1090px ){
+    .ventajas{
+        height: 1500px; 
+    }
+        .ventajas_container{
+            height: 1300px;
+        }
+
+                .cardv{
+                    width: 48.777%;   
+                }
+
+}
+
+@media screen and (max-width: 1000px ){
+    .ventajas_container{
+        width: 80%;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+}
+
+@media screen and (max-width: 850px ){
+    .cardv{
+        width: 48.444%;   
+    }
+
+}
+
+
+@media screen and (max-width: 670px ){
+    .ventajas_container{
+        width: 90%;
+    }
+
+}
+
+@media screen and (max-width: 600px ){
+    .ventajas{
+        height: 3100px;
+    }
+        .ventajas_container{
+            height: 2900px;
+        }
+                .cardv{
+                    width: 100%;
+                    height: 220px;
+                }
+
+                    .cardv_icono{
+                        height: 100px;
+                    }
+
+                        .cardv_icono_circle{
+                            width: 70px;
+                            height:70px;
+                            line-height: 70px;
+                        }
+
+                            .cardv_text h3, p{
+                              font-size: 15px;
+                            }
+
+}
