--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,7 +1,7 @@
 
 
 .about{
-    height: 700px;
+    height: 1500px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -11,7 +11,8 @@
         margin-left: 140px;
         margin-right: 140px;
         width: 100%;
-        height: 600px;
+        height: 1400px;
+        background-color: aqua;
     }
 
         .about_text{
@@ -59,3 +60,9 @@
             .about_img img{
                 width: 100%;
             }
+
+        
+        .about_funcfat{
+            height: 300px;
+            background-color: beige;
+        }
