--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,7 +1,7 @@
 
 
 .about{
-    height: 1500px;
+    height: 1300px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -11,58 +11,117 @@
         margin-left: 140px;
         margin-right: 140px;
         width: 100%;
-        height: 1400px;
-        background-color: aqua;
+        height: 1200px;
+      
     }
 
-        .about_text{
-            width: 54%;
-            float: left;
+        .about_container_1{
+            height: 550px ;
         }
 
-            .about_sub_title {
-                font-size: 20px;
-                font-weight: 700;
-                color: var(--color-rojo-logo);
-                
-            }
-
-            .about_text h2, .about_text h3 {
-                margin-bottom: 10px;
-            }
-
-            .about_text p {
-                font-size: 14px;
-                text-align: justify;
-                line-height: 1.5;
-                margin-bottom: 15px;
-            }
-
-
-
-            .about_mision{
-                width: 45%;
+            .about_text{
+                width: 54%;
                 float: left;
             }
 
-            .about_vision{
-                width: 45%;
+                .about_sub_title {
+                    font-size: 20px;
+                    font-weight: 700;
+                    color: var(--color-rojo-logo);
+                    
+                }
+
+                .about_text h2, .about_text h3 {
+                    margin-bottom: 10px;
+                }
+                .about_text h3{
+                    font-weight: 700;
+                }
+
+                .about_text p {
+                    font-size: 14px;
+                    text-align: justify;
+                    line-height: 1.5;
+                    margin-bottom: 15px;
+                }
+
+
+
+                .about_mision, .about_vision{
+                    width: 48%;
+                    float: left;
+                    box-shadow: 1px 4px 20px -2px rgb(0 0 0 / 10%);
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    border-radius: 12px;
+                }
+
+                .about_vision{
+                    float: right;
+                }
+
+                    .about_objective_center{
+                        margin-right: 13px;
+                        margin-left: 13px;
+                        margin-top: 10px;
+                    }
+
+            .about_img{
+                width: 40%;
                 float: right;
             }
 
+                .about_img img{
+                    width: 100%;
+                }
+
+        
 
 
-        .about_img{
-            width: 40%;
-            float: right;
+
+        .about_container_2{
+            height: 150px;
+            background-color: rgba(211, 211, 211, 0.342);
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
-
-            .about_img img{
+            .about_funfact{
+                display: flex;
+                height: 120px;
                 width: 100%;
             }
 
-        
-        .about_funcfat{
-            height: 300px;
-            background-color: beige;
+                .about_funfact_block{
+                    width: 25%;
+                    text-align: center;
+                }
+
+                    .about_funfact_icon{
+                        margin-bottom: 8px;
+                    }
+
+                        .about_funfact .fa-users, .about_funfact .fa-tools, .about_funfact .fa-trophy,.about_funfact .fa-medal{
+                            font-size: 45px;
+                            color:  var(--color-rojo-logo);
+                        }
+
+                        .counter{
+                            font-size: 30px;
+                        }
+            
+        .about_container_3{
+            height: 500px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
+
+            .about_video{
+                height: 315px;
+                width: 100%;
+                text-align: center;
+            }
+            
+                        
