--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -10,7 +10,9 @@
   transform: translate(-50%,-50%);
   background-color: rgba(0, 0, 0, 0.75);
   width: 100%;
+  height: 100%;
   min-height: 100vh;
+  padding: .625em;
 }
 
   .modal_container{
@@ -19,7 +21,23 @@
     border-radius: 16px;
     box-shadow: 1px 4px 20px -2px rgb(0 0 0 / 20%);
     background-color: #fff;
+    position: relative;
   }
+
+  .btnclose{
+    color: #ccc;
+    position: absolute;
+    top: 0rem;
+    right: 0.7rem;
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+    font-family: monospace;
+    font-size: 2.5em;
+  }
+    .btnclose:hover{
+      color: #eb3135c9;
+    }
 
     .modal_container .col-lg-12{
       padding-right: 15px;
@@ -31,6 +49,7 @@
         font-weight: 400;
         line-height: 1.2;
         font-size: 1.75rem;
+        letter-spacing: 0;
       }
 
         .modal_container .form-group{
@@ -51,9 +70,12 @@
             border: 1px solid #ced4da;
             border-radius: 0.25rem;
           }
+            .modal_container .form-group input:focus{
+              outline: 1px solid #ced4da;
+            }
 
           .btncontactar{
-            background-color: #334fba;
+            background-color: var(--color-rojo-logo);
             color: #fff;
             border-radius: 5px;
             padding: 12px 16px;
