--- a/src/css/slider.css
+++ b/src/css/slider.css
@@ -138,6 +138,10 @@
                 border-bottom: 1px solid #e6e6e6;
               }
 
+              .input-form-control:focus{
+                outline: none;
+              }
+
 
 /* Slider responsive */
 @media screen and (max-width: 1070px ){
