--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,3 +1,7 @@
+body.active-menum{
+  overflow-y: hidden;
+}
+
 
 /*header superior*/
 .head-superior {
@@ -106,12 +110,13 @@ header {
     margin-right: 105px;
   }
   
-  #menu-icon {
+  .menu-icon {
     display: none;
-    font-size: 50px;
+    font-size: 40px;
+    cursor: pointer;
   }
   
-  ul {
+  .menu-list {
     list-style: none;
   }
   
@@ -136,6 +141,7 @@ header {
     color: var(--color-blanco-primary);
     font-weight: bold;
     padding-left: 10px;
+    cursor: pointer;
   }
   
   
@@ -165,42 +171,51 @@ header {
 
 @media screen and (max-width: 750px ){
   /*Minimenu responsive*/
-  #menu-icon {
-    display: inline-block;
+  .menu-icon {
+    display: block;
     color: var(--color-blanco-primary);
   }
-  nav:hover ul {
+
+  nav:hover .menu-list {
     display: block;
   }
 
-  nav ul, nav:active ul {
+  nav ul, nav:active ul{
     display: none;
     z-index: 1000;
     position: absolute;
-    opacity: .95;
     background-color: var(--color-rojo-logo);
-    border: 1px solid #f5f5f5; 
     width: 100%;
     height: 100vh;
     top: 100px;
     left: 0;
+    border-top: 1px solid var(--color-blanco-primary)
+  }
 
+  .menu-list {
+    padding: 20px;
   }
   nav li {
     text-align: center;
     width: 100%;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.421);
+    padding: 1.5rem;
   }
   nav ul li a{
-    display: block;
-    padding: 15px;
+    display: table;
+    width: 100%;
+    padding: 1.5rem;
     height: 50px;
     text-decoration: none;
-    border-bottom: 3px solid rgba(255, 255, 255, 0.5);
     font-size: medium;
 
   }
   nav ul li a:hover{
     background-color: rgba(255, 255, 255, 0.3);
+  }
+
+  .menu-list.close{
+    right: -100%;
   }
 
 }
