--- a/src/css/nosotros.css
+++ b/src/css/nosotros.css
@@ -4,14 +4,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url('../img/patron.jpg');
+    /*background-image: url('../img/2.jpg');*/
+    background-image: linear-gradient(
+    rgba(255, 255, 255, 0.5),
+    rgba(255, 255, 255, 0.5)
+    ),url('../img/1.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    position: relative; 
-
+    position: relative;
 }
-
 
     .divborder{
         height: 500px;
@@ -127,25 +129,29 @@
                         text-align: center;
                     }
 
-                    .button-info-nos span{
-                        font-size: 10px;
-                        box-sizing: border-box;
-                        display: inline-block;
-                        text-rendering: auto;
-                        width: 23px;
-                        height: 23px;
-                        color: #ffffff;
-                        line-height: 23px;
-                        text-align: center;
-                        border-radius: 50px;
-                        background-color: var(--color-negro-logo);
-                        margin-left: 10px;
+                    .button-info-nos:hover{
+                        background-color: rgb(229, 11, 11);
                     }
 
-                    .button-info-nos span:hover{
-                        color: var(--color-rojo-logo);
-                        background-color: var(--color-blanco-primary);
-                    }
+                        .button-info-nos span{
+                            font-size: 10px;
+                            box-sizing: border-box;
+                            display: inline-block;
+                            text-rendering: auto;
+                            width: 23px;
+                            height: 23px;
+                            color: #ffffff;
+                            line-height: 23px;
+                            text-align: center;
+                            border-radius: 50px;
+                            background-color: var(--color-negro-logo);
+                            margin-left: 10px;
+                        }
+
+                        .button-info-nos span:hover{
+                            color: var(--color-rojo-logo);
+                            background-color: var(--color-blanco-primary);
+                        }
                 
 
 /* Seccion Nosotros responsive */
