--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,5 +1,8 @@
 
-
+.login{
+    width: 100%;
+    height: 100vh;
+}
 
     .login_container_left{
         width: 45%;
@@ -8,13 +11,12 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        /*background-image: url('../img/img_login.jpg');*/
-        background-size: cover;
-        background-position: -100px;
         background-image: linear-gradient(
             var(--color-rojo-logo),
             var(--color-rojo-logo)
             ),url('../img/img_login.jpg');
+        background-size: cover;
+        background-position: -100px;
     }
 
         .login_sup{
@@ -28,24 +30,36 @@
             }
         
         .login_center{
-            width: 40%;
+            width: 45%;
+            height: auto;
         }
 
             .login_center h5{
-                font-size: 36px;
-                font-weight: 700;
+                font-size: 2.6em;
+                font-weight: 600;
                 color: #fff;
-                margin-bottom: 15px;
+                margin-bottom: 20px;
                 line-height: 54px;
+                overflow-wrap: break-word;
             }
 
-            .login_center a{
+            .login_center button{
                 width: 100%;
-                color: rgb(255, 255, 255);
+                background-color: transparent;
                 border: 1px solid rgb(255, 255, 255);
-                padding: 5px 15px;
-                border-radius: 10px;
+                padding: 6px 16px;
+                border-radius: 8px;
                 cursor: pointer;
+                
+            }
+
+            .login_center span{
+                font-size: 0.9em;
+                color: rgb(255, 255, 255);
+                font-weight: 600;
+                line-height: 1.8;
+                text-transform: uppercase;
+                overflow-wrap: break-word;
             }
 
     .login_container_right{
@@ -62,58 +76,96 @@
         }
 
             .login_form h5{
-                margin-bottom: 25px;
-                font-size: 30px;
+                font-size: 2em;
                 font-weight: 600;
                 color: var(--color-rojo-logo);
                 text-align: center;
+                margin-bottom: 40px;
+                overflow-wrap: break-word;
             }
             
             .login_form input{
                 width: 100%;
-                height: 1.1876em;
-                padding: 18.5px 0px;
-                box-sizing: content-box;
-                margin-bottom: 15px;
+                font-size: 1rem;
+                padding: 18.5px 15px;
                 border-radius: 8px;
                 border: 1px solid #aaa;
-                letter-spacing: inherit;
+                color: #495057;
+                margin-bottom: 13px;
+            }
+
+            .login_form input:focus{
+                outline: 1px solid #aaa;
             }
 
             .login_form button{
                 width: 100%;
                 height: 50px;
-                font-size: 20px;
                 border-radius: 8px;
                 color: #fff;
                 background-color: var(--color-rojo-logo);
                 border: solid 1px var(--color-rojo-logo);
                 cursor: pointer;
-                margin-bottom: 30px;
+                margin-bottom: 40px;
             }
 
             .login_form button:hover{
                 background-color: rgb(229, 11, 11);
+                transition: all 0.5s ease-in-out;
             }
 
                 .login_form button span{
-                    width: 100%;
                     text-transform: uppercase;
-                    font-weight: 700;
-                    font-size: 13px;
+                    font-weight: bold;
+                    font-size: 15px;
                 }
 
             .login_help{
                 width: 100%;
-                text-align: center;
-                text-decoration: none;
-                color: #aaa;
                 cursor: pointer;
+                text-align: center;
             }
+
+                .login_help a{
+                    text-decoration: none;
+                    color: #aaa;
+                    overflow-wrap: break-word;
+                }
 
                 .login_help a:hover{
                     color: var(--color-rojo-logo);
                 }
 
 
-        
+/* Login responsive */
+@media screen and (max-width: 1000px ){
+    .login_container_left, .login_container_right{
+        width: 100%;
+        float: none;
+        height: 500px;
+    }
+
+        .login_center, .login_form{
+            width: 50%;
+        }
+            .login_center h5{
+                text-align: center;
+            }
+
+}
+
+@media screen and (max-width: 700px ){
+    .login_center, .login_form{
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 400px ){
+    .login_sup{
+        top: 10px;
+        left: 10px;
+    }
+    .login_center, .login_form{
+        width: 90%;
+    }
+}
