--- a/src/css/nosotros.css
+++ b/src/css/nosotros.css
@@ -130,7 +130,7 @@
                     }
 
                     .button-info-nos:hover{
-                        background-color: rgb(229, 11, 11);
+                        background-color: var(--color-rojo-logo-secundary);
                         transition: all 0.5s ease-in-out;
                     }
 
@@ -141,7 +141,7 @@
                             text-rendering: auto;
                             width: 23px;
                             height: 23px;
-                            color: #ffffff;
+                            color: var(--color-blanco-primary);
                             line-height: 23px;
                             text-align: center;
                             border-radius: 50px;
