--- a/src/css/precios.css
+++ b/src/css/precios.css
@@ -2,7 +2,7 @@
 
 .precios {
     width: 100%;
-    height: 780px;
+    height: 800px;
     text-align: center;
     background-color: #f4f7fc;
     
@@ -22,12 +22,15 @@
         color: var(--color-rojo-logo);
         font-weight: 600;
         text-transform: uppercase;
+        margin-bottom: 8px;
+        text-align: center;
       }
   
       .precios_head h2{
         display: inline-block;
         font-weight: 600;
         line-height: 1.4;
+        text-align: center;
       }
     
     .precios_options{
