--- a/src/css/contacto.css
+++ b/src/css/contacto.css
@@ -10,13 +10,11 @@
         width: 50%;
         height: 550px;
         float: left;
-
     }
 
         .contacto_form{
-            height: 550px;
+            height: auto;
             margin-left: 135px;
-
         }
 
             .contacto_form_head{
@@ -25,7 +23,7 @@
                 margin-left: 15px;
                 margin-right: 15px;
                 height: 80px;
-
+                overflow-wrap: break-word;
             }
 
                 .contacto_form_head h2{
@@ -45,8 +43,8 @@
 
 
             .contacto_form_fila{
-                    margin-left: 15px;
-                    margin-right: 15px;
+                margin-left: 15px;
+                margin-right: 15px;
 
             }
 
@@ -62,15 +60,20 @@
 
                 }
 
-                    .col-1-1 input, .col-1-2 input, .col-2 input, .col-3 textarea {
+                    .col-1-1 input, .col-1-2 input, .col-2 input, .col-3 textarea{
                         border: none;
                         box-shadow: inherit;
                         padding: 15px;
                         background: #f5f5f5;
                         font-family: Arial, Helvetica, sans-serif;
-                        margin-bottom: 2rem;
                         width: 100%;
                         
+                    }
+                    .col-1-1 input, .col-1-2 input, .col-2 input{
+                        margin-bottom: 2rem;
+                    }
+                    .col-3 textarea{
+                        margin-bottom: 1rem;
                     }
 
                     .col-1-1 input:focus, .col-1-2 input:focus, .col-2 input:focus, .col-3 textarea:focus{
@@ -96,12 +99,10 @@
         width: 50%;
         height: 550px;
         float: right;
-
     }
         .contacto_ubicacion{
-            height: 550px;
+            height: auto;
             margin-right: 135px;
-
         }
 
             .contacto_options{
@@ -112,12 +113,14 @@
                 list-style: none;
                 border-bottom: 1px solid #e7e7e7;
                 margin-bottom: 20px;
+                overflow-wrap: break-word;
             }
 
                 .option{
                     cursor: pointer;
                     display: inline-block;
                     padding: 3px;
+                    margin-right: 7px;
                     font-size: 23px;
                     color: var(--color-negro-logo);
                     font-weight: 700;
@@ -143,18 +146,21 @@
                 .content-active {
                     display: block;
                 }
-                
+                    .contacto_contents ul{
+                        overflow-wrap: break-word;
+                    }
                     .contacto_contents li{
+                        height: auto;
                         display: flex;
                         align-items: center;
                         margin-bottom: 30px;
                     }
-
-                        .contacto_contents .icon{
+                        
+                        .contacto_contents i{
                             margin-right: 15px;
-                            height: 60px;
-                            width: 60px;
-                            line-height: 60px;
+                            height: 52px;
+                            width: 52px;
+                            line-height: 52px;
                             background: var(--color-blanco-primary);
                             box-shadow: 0 5px 30px 0 rgb(214 215 216 / 57%);
                             border-radius: 50%;
@@ -167,17 +173,23 @@
                             font-size: 20px;
                         }
 
-                        .contacto_contents .info p{
-                            color: #666;
-                            font-size: 13px;
+                        .contacto_contents .info{
+                            width: 100%; 
+                            height: auto;
                         }
 
-                        .contacto_contents .info h4{
-                            color: var(--color-negro-logo);
-                            font-size: 12px;
-                            text-transform: uppercase;
-                            margin-bottom: 5px;
-                        }
+                            .contacto_contents .info p{
+                                color: #666;
+                                font-size: 13px;
+                                text-align: justify;
+                            }
+
+                            .contacto_contents .info h4{
+                                color: var(--color-negro-logo);
+                                font-size: 12px;
+                                text-transform: uppercase;
+                                margin-bottom: 5px;
+                            }
 
                     .contacto_contents iframe{
                         display: block;
@@ -196,11 +208,11 @@
 /* Seccion contacto responsive */ 
 @media screen and (max-width: 1000px ){
     .contacto{
-        height: 1100px;
+        height: auto;
     }
     
         .contacto_container_left, .contacto_container_right{
-            height: 550px;
+            height: auto;
             width: 100%;
             float: none;
             display: flex;
@@ -211,20 +223,28 @@
 
             .contacto_form, .contacto_ubicacion{
                 width: 80%;
-                height: 550px;
                 margin-left: 0px;
                 margin-right: 0px;
-
             }
+            .contacto_form{ margin-bottom: 20px; }
+            .contacto_ubicacion{ margin-bottom: 40px; }
 
                 .contacto_form_head{
                     margin-top: 40px;
+                    margin-bottom: 20px;
+                    height: auto;
                 }
 
                     .col-1-1, .col-1-2{
                         float: none;
                         width: 100%;
                     }
+                        .col-1-1 input, .col-1-2 input, .col-2 input{
+                            margin-bottom: 1.5rem;
+                        }
+                        .col-3 textarea {
+                            margin-bottom: 0.5rem;
+                        }
 
                 .contacto_options{
                     margin-top: 30px;
@@ -240,25 +260,19 @@
 }
 
 @media screen and (max-width: 370px ){
-    .contacto_form_head{
-        margin-bottom: 30px;
-    }
 
-        .col-1-1 input, .col-1-2 input, .col-2 input, .col-3 textarea {
-            margin-bottom: 1rem;
+    .contacto{overflow-x: hidden;}
+
+        .contacto_options{
+            text-align: center;
+            margin-top: 0px;
         }
+            
+            .option{
+                width: 100%;
+                border: 1px solid #e7e7e7;
+            }
 
-    .contacto_options{
-        text-align: center;
-        margin-top: 0px;
-    }
-        
-        .option{
-            width: 100%;
-            border: 1px solid #e7e7e7;
-        }
-
-    
 }
 
             
