--- a/src/css/precios.css
+++ b/src/css/precios.css
@@ -18,19 +18,21 @@
         margin-top: 80px;
       }
   
-      .precios_head h4{
+      .precios_head h2{
         color: var(--color-rojo-logo);
         font-weight: 600;
         text-transform: uppercase;
         margin-bottom: 8px;
         text-align: center;
+        font-size: 23px;
       }
   
-      .precios_head h2{
+      .precios_head h4{
         display: inline-block;
         font-weight: 600;
         line-height: 1.4;
         text-align: center;
+        font-size: 24px;
       }
     
     .precios_options{
